
Release branches will continue to receive security updates for about a year
from first release, but nonessential bugfixes and feature developments
will be made on the development trunk and appear in the next quarterly release.

Those wishing to use the latest code instead of a branch release can obtain
it from source control: http://www.mediawiki.org/wiki/Download_from_SVN

=== Configuration changes in 1.18 ===
* The WantedPages::getSQL hook has been removed and replaced with
  WantedPages::getQueryInfo . This may break older extensions.
* $wgUseCombinedLoginLink controls whether to output a combined
  login / create account link in the personal bar, or to output separate login
  and create account links
* Skin names are no longer created based on a ucfirst version of the key in
  $wgValidSkinNames but now the value. This means for
  $wgValidSkinNames["monobook"] = "MonoBook"; the skin loader will no longer try
  loading SkinMonobook and will instead load SkinMonoBook.
* The parser now attempts to output markers for editsection tokens and defer the
  rendering of them so skin and language specific markup does not need to be
  saved inside the parser cache note that this changes the cache key making all
  old entries in the parser cache invalid you can set $wgUseEditSectionTokens to
  false to disable this and keep your old parser cache entries.
  Note that this feature should reduce parser cache fragmentation when enabled.
* $wgMaxUploadSize may now be set to an array to specify the upload size limit
  per upload type.
* $wgAPICacheHelp added in 1.16 is now removed. To disable API help caching, set
  $wgAPICacheHelpTimeout = 0;
* OutputPage::isUserJsAllowed() no longer returns false when scripts are allowed
  by the page, but $wgAllowUserJs is set to false.
* Pure "Skin" class based custom skins are no longer supported, all custom skins
  should be put together using SkinTemplate and BaseTemplate or QuickTemplate.